# celery-test

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run.py  tasks.py
